[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/5x7-dot-matrix-character-lcd_24.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Textures/BG.jpg" type="Texture" id=3]
[ext_resource path="res://Sprites/gradient.png" type="Texture" id=4]
[ext_resource path="res://Textures/logo2.png" type="Texture" id=5]
[ext_resource path="res://Textures/BG.png" type="Texture" id=6]
[ext_resource path="res://Sounds/AprilFools/Обычный парень — Виндяй Remix - ポルノ (by Обычный Парень).mp3" type="AudioStream" id=7]
[ext_resource path="res://Fonts/plane-crush_40.tres" type="DynamicFont" id=9]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="BG2" type="Sprite" parent="."]
position = Vector2( 480, 320 )
texture = ExtResource( 6 )

[node name="BG" type="Sprite" parent="."]
visible = false
position = Vector2( 480, 320 )
texture = ExtResource( 3 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 387.892, 106.308 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Version" type="Label" parent="."]
margin_top = 523.0
margin_right = 604.0
margin_bottom = 601.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Version 2.0.0
First weapon & camera rotation
(SINGLEPLAYER)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="."]
margin_top = -2.0
margin_right = 1024.0
margin_bottom = 598.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Container"]
margin_left = 900.0
margin_top = 519.0
margin_right = 1024.0
margin_bottom = 571.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.27451, 0.027451, 0.027451, 1 )
text = "quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Container"]
margin_left = 696.0
margin_top = 337.0
margin_right = 1024.0
margin_bottom = 389.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "start game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Container"]
margin_left = 800.0
margin_top = 426.0
margin_right = 1024.0
margin_bottom = 478.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.662745, 0.32549, 0, 1 )
text = "options"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gradient" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 300 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Container2" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SingleButton" type="Button" parent="Container2"]
margin_left = 604.0
margin_top = 336.0
margin_right = 1024.0
margin_bottom = 382.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.403922, 0.184314, 0.184314, 1 )
text = "singleplayer"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="Container2"]
margin_left = 842.0
margin_top = 517.0
margin_right = 1024.0
margin_bottom = 563.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.623529, 0.14902, 0.14902, 1 )
text = "close"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="Container2"]
anchor_left = -0.0314972
anchor_right = -0.0314972
margin_left = 604.26
margin_top = 424.0
margin_right = 752.26
margin_bottom = 470.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.517647, 0.517647, 0.0196078, 1 )
text = "join"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="Container2"]
margin_left = 876.0
margin_top = 424.0
margin_right = 1025.0
margin_bottom = 470.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.0352941, 0.435294, 0.0352941, 1 )
text = "host"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[connection signal="pressed" from="Container/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Container/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Container2/SingleButton" to="." method="_on_SingleButton_pressed"]
[connection signal="pressed" from="Container2/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Container2/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="Container2/HostButton" to="." method="_on_HostButton_pressed"]
